# plutus-apps

./: cabal.project  flake.nix
nix/pkgs/haskell/: sha256map.nix
plutus-chain-index-core/src/Plutus/ChainIndex/: Client.hs
plutus-contract/src/Plutus/Trace/: Emulator.hs
plutus-contract/src/Wallet/Emulator/: MultiAgent.hs
plutus-contract/test/Spec/: Emulator.hs
plutus-ledger-constraints/: plutus-ledger-constraints.cabal
plutus-ledger-constraints/src/Ledger/: Constraints.hs
plutus-ledger-constraints/src/Ledger/Constraints/: OffChain.hs  OnChain.hs  TxConstraints.hs
plutus-ledger/src/Cardano/Api/Modes/: Orphans.hs
plutus-ledger/src/Ledger/Tx/: CardanoAPI.hs
plutus-pab-executables/: plutus-pab-executables.cabal
plutus-playground-server/: plutus-playground-server.cabal
plutus-streaming/: plutus-streaming.cabal
plutus-use-cases/src/Plutus/Contracts/: Currency.hs
wandano/: README.md  wandano.cabal
wandano/src/Wandano/: ECDSA.hs
